[tool.poetry]
name = "metrobi"
version = "0.1.0"
description = ""
authors = ["matheuscas <matheus.mcas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
